fine tune rearrange song listing

--- a/index.html
+++ b/index.html
@@ -168,11 +168,20 @@
                 <h3 class="mt-4">Songs</h3>
 
                 <p>
-                    <b>Wasting My Time (feat. Allen)</b>
+                    <b>Wasting My Time (feat. Allan)</b>
                     <a href="lyrics/Wasting My Time.pdf" target="_blank">Lyrics</a>
                 </p>
                 <audio controls preload="none">
                     <source src="music/Wasting My Time1.wav" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+
+                <p>
+                    <b>Soon (feat. Texas)</b>
+                    <a href="lyrics/Soon.pdf" target="_blank">Lyrics</a>
+                </p>
+                <audio controls preload="none">
+                    <source src="music/Soon.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
 
@@ -194,21 +203,6 @@
                     Your browser does not support the audio element.
                 </audio>
 
-                <p>
-                    <b>Soon (feat. Texas)</b>
-                    <a href="lyrics/Soon.pdf" target="_blank">Lyrics</a>
-                </p>
-                <audio controls preload="none">
-                    <source src="music/Soon.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-
-                <p><b>Oh Well (short)</b></p>
-                <audio controls preload="none">
-                    <source src="music/Oh Well2.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-
                 <p><b>What I'm Lookin' For (feat. Young Amazin)</b></p>
                 <audio controls preload="none">
                     <source src="music/What Im Looking For.mp3" type="audio/mpeg">
@@ -227,13 +221,19 @@
                     Your browser does not support the audio element.
                 </audio>
 
-                <p><b>Shocking</b></p>
+                <p><b>*** I'M SHOCKED! ***</b></p>
                 <audio controls preload="none">
                     <source src="music/Shocking.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
 
-                <p><b>Just F*ckin Around</b></p>
+                <p><b>Oh Well ('short' feat. Terrence L.)</b></p>
+                <audio controls preload="none">
+                    <source src="music/Oh Well2.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+
+                <p><b>Just F*ckin Around - NO... REALY (feat. Terrence L.)</b></p>
                 <audio controls preload="none">
                     <source src="music/You So Fine.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
@@ -246,7 +246,12 @@
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
                         <a class="nav-link" href="abelton_routing.html" target="_blank">
-                            Abelton to NI Kore Live Routing
+                            Abelton Live to NI Kore Routing
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kore_routing.html" target="_blank">
+                            Protools to NI Kore Routing
                         </a>
                     </li>
                     <li class="nav-item">
@@ -257,11 +262,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="kontakt_routing.html" target="_blank">
                             NI Kontakt Routing
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="kore_routing.html" target="_blank">
-                            NI Kore to Protools Routing
                         </a>
                     </li>
                 </ul>
