--- a/videos.html
+++ b/videos.html
@@ -21,7 +21,7 @@
                 </video>
             </div>
             <div class="col-md-4" style="text-align:center">
-                <p>NI Kontakt to Protools Routing</p>
+                <p>Protools to NI Kore Routing</p>
                 <video controls class="video-page">
                     <source src="videos/K2_PT_Routing.mp4" type="video/mp4">
                 </video>
