--- a/equipment.html
+++ b/equipment.html
@@ -123,7 +123,10 @@
         <h6 style="text-align:center"><em>(click to enlarge)</em></h6>
         <div class="row">
             <div class="col-sm-2">
-                <p style="text-align:center">Samson Resolve 50a Monitors</p>
+                <p style="text-align:center">
+                    Samson Resolv 50a Active
+                    Monitors
+                </p>
                 <img id="myImg1" src="images/equipment/Sanson 50a.jpg">
             </div>
             <div class="col-sm-2">
@@ -590,6 +593,7 @@
         </script>
 
     </div>
+    <footer-component></footer-component>
 
 </body>
 </html >
