--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
                         Native Instrument
                     </a>
                     Kore (no longer available), Kontakt, and Komplete as
-                    my main VSTIs because they comes with an abundance
+                    my main
+                    <a href="https://www.liveabout.com/what-are-vst-plug-ins-1817748"
+                       target="_blank"> VST and VSTi
+                    </a>
+                    plugins because they comes with an abundance
                     of soft instruments and samplers.
                 </p>
                 <p>
@@ -157,15 +161,26 @@
                          alt="Forest" class="grow" style="margin-top:10px">
                 </a>
 
-                <span style="font-size:12px">(click to enlarge)</span>
+                <span style=font-size:12px>(click to enlarge)</span>
 
-                <div class="fakeimg">At the very begining</div>
+                <div>At the very begining</div>
                 <p>Somerset, NJ, United States</p>
 
 
                 <!-- Song listing -->
 
-                <h3 class="mt-4">Songs</h3>
+                <h3 class="mt-4">Songs </h3>
+                <p style="line-height: 15px; font-size:12px; color:red;">
+                    <b>
+                        <em>
+                            It is highly recommended to listen with 
+                            headphones, ear buds, Bluetooth speakers, 
+                            or good quality laptop speakers to get the 
+                            best sound. Mobile phone speakers will be 
+                            inadequate.
+                        </em>
+                    </b>
+                </p>
 
                 <p>
                     <b>Wasting My Time (feat. Allan)</b>
