fixed contact footer

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿    <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -11,11 +11,12 @@
     <script src="components/footer.js" type="text/javascript" defer></script>
     <style>
         #logo1 {
-            width: 540px; /* screen width */
-            height: 170px; /* screen height */
+            width: 640px;
+            height: 200px;
             background-image: url("images/wave.png");
             background-repeat: no-repeat;
             background-size: 100%;
+            /*border-style: solid;*/
         }
     </style>
 </head>
@@ -29,33 +30,38 @@
                          alt="Forest" class="grow">
                 </a>
             </div>
+
             <div class="col-sm-3">
                 <p class="contact">
-                    <strong>Terrence Lennon</strong>
-                </p>
-                <address style="margin-left:15px">
+                    <span style="font-size:x-large"><strong>Terrence Lennon</strong></span><br>
                     1234 Main Street <br>
                     Somerset, NJ 08641<br>
                     Home: 732.633.1560 <br>
                     <strong>Email: </strong><a href="mailto:tlennon.ikp@gmail.com" target="_blank"> IvoryKey@ikp.com</a>
-                </address>
-
+                </p>
             </div>
+
+            <!--Sound wave graphic-->
+
             <div class="col-sm-4" id="logo1">
             </div>
+
         </div>
+
         <div>
-            <span>
+            <p>
                 <em>
-                    A professional recording engineer, musician, songwriter, and producer of electronic,
-                    hip hop, pop, R&B music. Unlimited tracks and every instrument on the planet. Contact us to
-                    make your next demo or begin your next musical project.
+                    A professional recording engineer, musician, songwriter,
+                    and producer of electronic, hip hop, pop, R&B music.
+                    Unlimited tracks and every instrument on the planet.
+                    Contact us to make your next demo or begin your next
+                    musical project.
                 </em>
-            </span>
-        </div>
-        <div>
+            </p>
+
             <img src="images/testimonial_logo_clear.png"
                  alt="Cinque Terre" class="nohover">
+
             <p class="reviewer">
                 <span class="reviewer">Julie B... </span>"I wanted to create a demo
                 to upload it one of those cloud composer services so my friends and family can hear me sing.
@@ -76,5 +82,6 @@
         </div>
     </div>
     <footer-component></footer-component>
+
 </body>
-</html>﻿
+</html>
