--- a/videos.html
+++ b/videos.html
@@ -16,25 +16,25 @@
         <div class="row" style="margin-top:20px">
             <div class="col-md-4" style="text-align:center">
                 <p>Abelton Live to NI Kore Routing</p>
-                <video controls class="video-page">
+                <video controls class="video-page" preload="metadata">
                     <source src="videos/K2 Routing Abelton.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="col-md-4" style="text-align:center">
                 <p>Protools to NI Kore Routing</p>
-                <video controls class="video-page">
+                <video controls class="video-page" preload="metadata">
                     <source src="videos/K2_PT_Routing.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="col-md-4" style="text-align:center">
                 <p>NI Kontakt Automation in Protools</p>
-                <video controls class="video-page">
+                <video controls class="video-page" preload="metadata">
                     <source src="videos/Kontakt Automation.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="col-md-4" style="text-align:center">
                 <p>NI Kontakt Routing</p>
-                <video controls class="video-page">
+                <video controls class="video-page" preload="metadata">
                     <source src="videos/Kontakt Routing.mp4" type="video/mp4">
                 </video>
             </div>
