--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <b>Wasting My Time (feat. Allan)</b>
                     <a href="lyrics/Wasting My Time.pdf" target="_blank">Lyrics</a>
                 </p>
-                <audio controls preload="none">
+                <audio controls preload="metadata">
                     <source src="music/Wasting My Time1.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
@@ -195,7 +195,7 @@
                     <b>Soon (feat. Texas)</b>
                     <a href="lyrics/Soon.pdf" target="_blank">Lyrics</a>
                 </p>
-                <audio controls preload="none">
+                <audio controls preload="metadata">
                     <source src="music/Soon.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
@@ -204,7 +204,7 @@
                     <b>G-Ride (feat. Christina R.)</b>
                     <a href="lyrics/G-Ride.pdf" target="_blank">Lyrics</a>
                 </p>
-                <audio controls preload="none">
+                <audio controls preload="metadata">
                     <source src="music/G Ride2.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
@@ -213,43 +213,43 @@
                     <b>My Fantasy Boy (feat. Janira R.)</b>
                     <a href="lyrics/My Fantasy Boy.pdf" target="_blank">Lyrics</a>
                 </p>
-                <audio controls preload="none">
+                <audio controls preload="metadata">
                     <source src="music/Janira3.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
 
                 <p><b>What I'm Lookin' For (feat. Young Amazin)</b></p>
-                <audio controls preload="none">
+                <audio controls preload="metadata">
                     <source src="music/What Im Looking For.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
 
                 <p><b>No More' For (feat. Young Amazin)</b></p>
-                <audio controls preload="none">
+                <audio controls preload="metadata">
                     <source src="music/No More Dutch.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
 
                 <p><b>Can't Breath (feat. Gabrielle, Trinity L.)</b></p>
-                <audio controls preload="none">
+                <audio controls preload="metadata">
                     <source src="music/Gabrielle.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
 
                 <p><b>*** I'M SHOCKED! ***</b></p>
-                <audio controls preload="none">
+                <audio controls preload="metadata">
                     <source src="music/Shocking.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
 
                 <p><b>Oh Well ('short' feat. Terrence L.)</b></p>
-                <audio controls preload="none">
+                <audio controls preload="metadata">
                     <source src="music/Oh Well2.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
 
                 <p><b>Just F*ckin Around - NO... REALY (feat. Terrence L.)</b></p>
-                <audio controls preload="none">
+                <audio controls preload="metadata">
                     <source src="music/You So Fine.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
